force-app/main/default/objects/Cleaning_Request__c/Cleaning_Request__c.object-meta.xml
<CustomObject>
    <label>Cleaning Request</label>
    <nameField>
        <displayFormat>CLR-{0000}</displayFormat>
        <label>Cleaning Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cleaning Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>