force-app/main/default/objects/Cleaning_Request__c/fields/Cleaning_Crew__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cleaning Crew</label>
    <referenceTo>Ground_Crew__c</referenceTo>
    <relationshipLabel>Cleaning Requests</relationshipLabel>
    <relationshipName>Cleaning_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>