force-app/main/default/objects/Cleaning_Request__c/fields/Cleaning_Type__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Type__c</fullName>
    <label>Cleaning Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Deep</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>