force-app/main/default/objects/Cleaning_Request__c/fields/Flight__c.field-meta.xml
<CustomField>
    <fullName>Flight__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flight</label>
    <referenceTo>Flight__c</referenceTo>
    <relationshipLabel>Cleaning Requests</relationshipLabel>
    <relationshipName>Cleaning_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>